// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClientInformation /> App and lib version, and device ID should render the app and lib version 1`] = `
<div
  className={
    Object {
      "data-css-1y4o210": "",
    }
  }
  onTouchStart={[Function]}
>
  <p
    className={
      Object {
        "data-css-l9h00q": "",
      }
    }
  >
    App Version:
     
    1.2.3
     
    (
    7.8.9
    )
    <br />
    Lib Version:
     
    4.5.6
  </p>
</div>
`;

exports[`<ClientInformation /> App and lib version, and device ID should show the device ID 1`] = `
<ClientInformation
  appVersion="1.2.3"
  codebaseVersion="7.8.9"
  deviceId="my-awesome-device-id"
  enableDebugLogging={[Function]}
  libVersion="4.5.6"
>
  <div
    className={
      Object {
        "data-css-1y4o210": "",
      }
    }
    onTouchStart={[Function]}
  >
    <p
      className={
        Object {
          "data-css-l9h00q": "",
        }
      }
    >
      App Version:
       
      1.2.3
       
      (
      7.8.9
      )
      <br />
      Lib Version:
       
      4.5.6
    </p>
    <p
      className={
        Object {
          "data-css-1g0uqnk": "",
        }
      }
    >
      Device ID:
       
      my-awesome-device-id
    </p>
  </div>
</ClientInformation>
`;

exports[`<ClientInformation /> should not render if no data is available 1`] = `""`;

exports[`<ClientInformation /> should re-render when data comes available 1`] = `
<div
  className={
    Object {
      "data-css-1y4o210": "",
    }
  }
  onTouchStart={[Function]}
>
  <p
    className={
      Object {
        "data-css-l9h00q": "",
      }
    }
  >
    App Version:
     
    1.2.3
     
    (
    7.8.9
    )
    <br />
    Lib Version:
     
    4.5.6
  </p>
</div>
`;
